landscape for code

--- a/docs/codeSamples.tex
+++ b/docs/codeSamples.tex
@@ -1,3 +1,4 @@
+\begin{landscape}
 \subsubsection{State in the Repl}
 As Haskell encapsulates state within monads, any function which seeks to manipulate state must be
 within that monad. This was most important in the type inference module and in the repl, where new
@@ -227,3 +228,4 @@ Figures~\ref{fig:fold} and~\ref{fig:foldVim}
     \caption{Part of the folding function for vim}
 \label{fig:fold}
 \end{figure}
+\end{landscape}
