--- a/docs/report.tex
+++ b/docs/report.tex
@@ -20,6 +20,7 @@
 \usepackage{float}
 \usepackage{titlesec}
 \usepackage[flushleft]{threeparttable}
+\usepackage{pdflscape}
 % line spacing
 \linespread{1.3}
 
