--- a/docs/libs.tex
+++ b/docs/libs.tex
@@ -92,6 +92,9 @@ The standard libraries are arranged as follows:
         log2 & $Number \rightarrow Number$ \\
         log10 & $Number \rightarrow Number$ \\
         logBase & $Number \rightarrow Number$ \\
+        sin & $Number \rightarrow Number$ \\
+        cos & $Number \rightarrow Number$ \\
+        tan & $Number \rightarrow Number$ \\
         fib & $Number \rightarrow Number$ \\
         factorial & $Number \rightarrow Number$ \\
         ceiling & $Number \rightarrow Number$ \\
