--- a/docs/libs.tex
+++ b/docs/libs.tex
@@ -24,7 +24,6 @@ The standard libraries are arranged as follows:
 \label{table:combinators}
 \end{table}
 
-
 \begin{table}[H]
     \begin{tabular}{l r}
     \rowcolor{light-gray}
@@ -95,6 +94,9 @@ The standard libraries are arranged as follows:
         sin & $Number \rightarrow Number$ \\
         cos & $Number \rightarrow Number$ \\
         tan & $Number \rightarrow Number$ \\
+        arcsin & $Number \rightarrow Number$ \\
+        arccos & $Number \rightarrow Number$ \\
+        arctan & $Number \rightarrow Number$ \\
         fib & $Number \rightarrow Number$ \\
         factorial & $Number \rightarrow Number$ \\
         ceiling & $Number \rightarrow Number$ \\
