fixed minted formatting

--- a/docs/libs.tex
+++ b/docs/libs.tex
@@ -24,8 +24,7 @@ The standard libraries are arranged as follows:
 \label{table:combinators}
 \end{table}
 
-\begin{table}[H]
-    \begin{tabular}{l r}
+\begin{longtable}{l r}
     \rowcolor{light-gray}
     \textbf{standard} & \\
     Function & Type Signature \\
@@ -61,10 +60,9 @@ The standard libraries are arranged as follows:
     last & $\forall a. [a] \rightarrow a$ \\
     quicksort & $\forall a. [a] \rightarrow [a]$ \\
     mergesort & $\forall a. [a] \rightarrow [a]$ \\
-    \end{tabular}
     \caption{Standard library}
 \label{table:standard}
-\end{table}
+\end{longtable}
 
 \begin{table}
     \begin{tabular}{l r}
