--- a/docs/syntax.tex
+++ b/docs/syntax.tex
@@ -111,6 +111,7 @@ Tuples are created with \{  and \}
 
 \begin{minted}{sml}
     microML> {1, 2}
+    microML> {1, 2} : {Number, Number}
 \end{minted}
 
 \subsection{Indenting}
