forgot shell call

--- a/docs/repl.tex
+++ b/docs/repl.tex
@@ -14,6 +14,7 @@ The following commands are available in the repl (Table~\ref{tabel:repl}):
             :browse & & See the functions in the environment \\
             :pst & \textit{expr} & Pretty print parse tree to terminal \\
             :pstText & \textit{expr} & Print text form of parse tree \\
+            :! & string & call the shell \\
     \end{tabu}
 \caption{In-repl commands}
 \label{tabel:repl}
