--- a/docs/glossary.tex
+++ b/docs/glossary.tex
@@ -66,3 +66,9 @@
     description={a function is \textit{total} which has a legal output for every legal input, i.e.\ an output is
     defined for all possible input}
 }
+
+\newglossaryentry{ghci}
+{%
+    name={ghci},
+    description={the Glasgow Haskell Compiler's repl environment}
+}
