--- a/docs/libs.tex
+++ b/docs/libs.tex
@@ -64,9 +64,8 @@ The standard libraries are arranged as follows:
 \label{table:standard}
 \end{longtable}
 
-\begin{table}
-    \begin{tabular}{l r}
-    \rowcolor{light-gray}
+\begin{longtable}{l r}
+        \rowcolor{light-gray}
         \textbf{maths} & \\
         Function & Type Signature \\
         \hline
@@ -89,6 +88,7 @@ The standard libraries are arranged as follows:
         log2 & $Number \rightarrow Number$ \\
         log10 & $Number \rightarrow Number$ \\
         logBase & $Number \rightarrow Number$ \\
+        radians & $Number \rightarrow Number$ \\
         sin & $Number \rightarrow Number$ \\
         cos & $Number \rightarrow Number$ \\
         tan & $Number \rightarrow Number$ \\
@@ -99,10 +99,9 @@ The standard libraries are arranged as follows:
         factorial & $Number \rightarrow Number$ \\
         ceiling & $Number \rightarrow Number$ \\
         gcd & $Number \rightarrow Number \rightarrow Number$ \\
-    \end{tabular}
     \caption{Maths library}
 \label{table:maths}
-\end{table}
+\end{longtable}
 
 \begin{table}[H]
     \begin{tabular}{l r}
