--- a/docs/codeSamples.tex
+++ b/docs/codeSamples.tex
@@ -1,36 +1,13 @@
-\subsubsection{State in the Repl}
-As Haskell encapsulates state within monads, any function which seeks to manipulate state must be
-within that monad. This was most important in the type inference module and in the repl, where new
-function definitions had to be dynamically added to the environment and type-checked.
-Figure~\ref{fig:exec}
+The following code extracts do not represent the complete code for microML. The interested reader is
+referred to the repository on github \url{https://github.com/kellino/microML} or to the source code
+included in the submission.
 
-\begin{landscape}
-\begin{figure}
-    \begin{minted}[breaklines=true]{haskell}
--- | execution function while repl is running
-exec :: Bool -> L.Text -> Repl ()
-exec update source = do
-    st       <- get
+\subsubsection{Repl.hs}
+The most complete entry point for the language, the repl environment, is partially listed here
+\lstinputlisting[language=haskell, showstringspaces=false, basicstyle=\tiny, firstline=44]{../src/Repl/Repl.hs}
 
-    mod'     <- hoistError $ parseProgram "<stdin>" source
-    typeEnv' <- hoistError $ inferTop (typeEnv st) mod'
-
-    let st' = st { termEnv = foldl' evalDef (termEnv st) mod'
-                 , typeEnv = typeEnv' `mappend` typeEnv st 
-                 }
-
-    when update (put st')
-
-    case Prelude.lookup "it" mod' of
-      Nothing -> return ()
-      Just ex -> do
-        let (val, _) = runEval (termEnv st') "it" ex
-        showOutput val st'
-    \end{minted}
-    \caption{The exec function in Repl.Repl}
-\label{fig:exec}
-\end{figure}
-\end{landscape}
+\subsubsection{CallGraph.hs}
+\lstinputlisting[language=haskell, breaklines=true, showstringspaces=false, basicstyle=\tiny, firstline=20]{../src/Compiler/CallGraph.hs}
 
 \subsubsection{Type checking of built-in functions}
 Primitive operators and functions, such as head and tail are not available to the inference engine.
@@ -40,7 +17,7 @@ functions can now be type checked\footnote{Haskell overcomes this problem partia
 everything as a library function, including such things as + and -, which in microML are
 primitives.}. Figure~\ref{fig:typesigs}
 
-\begin{figure}
+\begin{figure}[H]
     \begin{minted}[breaklines=true]{haskell}
   ("show"   , Forall  [polyA] (TVar polyA `TArrow` typeString))
 , ("read"   , Forall  [] (typeString `TArrow` typeNum))
@@ -51,23 +28,15 @@ primitives.}. Figure~\ref{fig:typesigs}
 \label{fig:typesigs}
 \end{figure}
 
-\subsubsection{A Parsec Parser Combinator}
-An example of a typical parsing function. Complex regular expressions have been replaced with small
-regular expressions and other parser combinators. Figure~\ref{fig:parsec}
+\subsubsection{Lexer.hs}
+\lstinputlisting[language=haskell, breaklines=true, showstringspaces=false, firstline=13, basicstyle=\tiny]{../src/MicroML/Lexer.hs}
 
-\begin{figure}
-    \begin{minted}{haskell}
-lambda :: Parser Expr
-lambda = do
-    reservedOp "\\"
-    args <- many varName
-    reservedOp "->"
-    body <- expr
-    return $ foldr Lam body args
-    \end{minted}
-    \caption{The parser for microML anonymous functions}
-\label{fig:parsec}
-\end{figure}
+\subsubsection{Parser.hs}
+An example of a parser written with parser combinators. Complex regular expressions have been replaced with small
+regular expressions and other parser combinators.
+\lstinputlisting[language=haskell, breaklines=true, showstringspaces=false, firstline=23, basicstyle=\tiny]{../src/MicroML/Parser.hs}
+
+\subsubsection{Floating Point Representation}
 Truncating floating-point representation in the repl is done using string manipulation. The choice
 of three consecutive 0s is largely arbitrary. See Figure~\ref{fig:trunc} and
 Section~\ref{floatingPoint}.
@@ -90,108 +59,25 @@ hasform (_:ys) = all (== '9') ys
 \label{fig:trunc}
 \end{figure}
 
-\subsubsection{Unit Testing}
+\subsubsection{Unit Testing\@: ListPrimitivesSpec.hs}
 Unit testing was conducted with the HSpec package\footnote{\url{https://hspec.github.io/}}.
-Figure~\ref{fig:unit}
+\lstinputlisting[language=haskell, breaklines=true, showstringspaces=false, basicstyle=\tiny]{../test/ListPrimitivesSpec.hs}
 
-\begin{landscape}
-\begin{figure}
-    \begin{minted}[breaklines=true]{haskell}
-listprims :: IO ()
-listprims = hspec $ 
-    describe "listprims" $ do
-        describe "car" $ do
-            it "gets the head of a list" $ 
-                car (BinOp OpCons (Lit (LInt 3)) Nil) `shouldBe` (Lit (LInt 3) :: Expr)
-            it "gets the head of a string" $
-                car (Lit (LString "hello")) `shouldBe` (Lit (LChar 'h') :: Expr)
-            it "should fail on non-list ints" $ 
-                evaluate (car (Lit (LInt 1)))        `shouldThrow` anyException
-            it "should fail on non-list doubles" $ 
-                evaluate (car (Lit (LDouble 1)))     `shouldThrow` anyException
-            it "should fail on non-list chars" $ 
-                evaluate (car (Lit (LChar 'a')))     `shouldThrow` anyException
-            it "should fail on non-list bools" $ 
-                evaluate (car (Lit (LBoolean True))) `shouldThrow` anyException
-    \end{minted}
-    \caption{Unit testing}
-\label{fig:unit}
-\end{figure}
-\end{landscape}
+\subsubsection{Eval.hs}
+\lstinputlisting[language=haskell, breaklines=true, showstringspaces=false, firstline=10,
+basicstyle=\tiny]{../src/Repl/Eval.hs}
+
+\subsubsection{Infer.hs}
+\lstinputlisting[language=haskell, breaklines=true, showstringspaces=false, firstline=25, basicstyle=\tiny]{../src/MicroML/Typing/Infer.hs}
+
 
 \section{Utilities}
 MicroML also ships with a number of utility scripts.
 The installation script is written in bash\footnote{The script makes use of bash arrays so it is not
 100\% posix compatible. As \textit{dash} has now become the standard shell on Ubuntu future
-iterations might need to take this into account.}. Figure~\ref{fig:installation}
-\begin{figure}
-    \begin{minted}[breaklines=true]{bash}
-function join_by { local IFS="$1"; shift; echo "$*"; }
-## check for this software. Only stack is essential
-stack=$(which stack 2>/dev/null) 
-fig=$(which figlet 2>/dev/null)
-cow=$(which cowsay 2>/dev/null)
-lol=$(which lolcat 2>/dev/null)
-if [ ! -x "$fig" ]; then
-    progs=("${progs[@]}" "figlet ")
-fi
-if [ ! -x "$cow" ]; then
-    progs=("${progs[@]}" " cowsay ")
-fi
-if [ ! -x "$lol" ]; then
-    progs=("${progs[@]}" " lolcat")
-fi
-if [ -x "$stack" ]; then
-    printf "\e[1mstack found\e[0m\n"
-    printf "\e[1mrunning tests and building\e[0m\n"
-    stack test 
-    rc=$?
-    if [ "$rc" != 0 ]; then
-        printf "\n\e[31mCould not pass all tests. The build has failed\e[0m\n"
-        exit "$rc" 
-    fi
-    printf "\e[1minstalling in %s/.local/bin/\n" "$HOME"
-    stack install
-    rc=$?
-    if [ "$rc" != 0 ]; then
-        printf "\nCould not install the executable into %s/.local/bin. Please copy it manually into your path\n" "$HOME"
-        exit "$rc"
-    fi
-    printf "\n\e[1mcopying standard libraries to home directory\e[0m\n"
+iterations might need to take this into account.}.
+\lstinputlisting[language=bash, breaklines=true, showstringspaces=false, basicstyle=\tiny]{../installMicroML}
 
-    ## delete old standard libs if they are found
-    if [ -x "$HOME"/.microML ]; then
-        printf "\n\e[1mremoving old standard library\e[0m\n"
-        rm -rf "$HOME"/.microML
-    fi
-    printf "\n\e[1minstalling standard library\e[0m\n"
-
-    cp -vr src/Libs "$HOME"
-    mv "$HOME/Libs" "$HOME/.microML"
-    printf "\n\e[1mcopying default .microMLrc to home directory\e[0m\n"
-    cp -v utils/microMLrc "$HOME"/.microMLrc
-    printf "\n\e[1mfinished!\e[0m\n"
-
-    if [ -n "$progs" ]; then
-        len=${#progs[@]}
-        if [ "$len" -eq 1 ]; then
-            str="${progs[*]}"
-        elif [ "$len" -eq 2 ]; then
-            str=$(join_by $"&" "${progs[@]}")
-        else 
-            str=$("figlet, cowsay and lolcat")
-        fi
-        #str=$(join_by , "${progs[@]}")
-        printf "\e[1mYou can have a more interesting repl if you also install %s\e[0m\n" "$str"
-    fi
-else 
-    printf "\e[31mCould not find stack in your system path. Please install it using your package
-    manager or go to \e[0;1mhttps://docs.haskellstack.org/en/stable/README/\e[0m\n"
-fi
-    \end{minted}
-    \caption{Bash installation script}
-\label{fig:installation}
-\end{figure}
 MicroML also has a simple (neo)vim plugin which ships with the repo. The folding function is of some
 interest, as it autofolds comments, setting the function name as its `title'. See
 Figures~\ref{fig:fold} and~\ref{fig:foldVim}
