--- a/docs/report.tex
+++ b/docs/report.tex
@@ -275,12 +275,13 @@ can be seen in Table~\ref{table:requirements}.
             12 & Repl history & C \\
             13 & view parse tree in repl & C \\
             14 & create call graph of program & C \\
+            15 & configuration support for repl & C \\
             \hline
-            15 & Editor support for coding& C \\
-            16 & Folds, syntax highlighting and autocomplete in editor & C \\
-            17 & Inline \textit{markdown} style comments in source files & C \\
+            16 & Editor support for coding& C \\
+            17 & Folds, syntax highlighting and autocomplete in editor & C \\
+            18 & Inline \textit{markdown} style comments in source files & C \\
             \hline
-            18 & Comprehensive custom C++ compiler & W \\
+            19 & Comprehensive custom C++ compiler & W \\
             \hline
         \end{tabular}
       \begin{tablenotes}
@@ -1500,12 +1501,13 @@ compiler) and syntax-highlighted and written in `plain English'. Figure~\ref{fig
             12 & Repl history & C & \checkmark\\
             13 & view parse tree in repl & C & \checkmark\\
             14 & create call graph of program & C & \checkmark\\
+            15 & configuration support for repl & C  & \checkmark \\
             \hline
-            15 & Editor support for coding & C & \checkmark\\
-            16 & Folds, syntax highlighting and autocomplete in editor & C & \checkmark\\
-            17 & Inline \textit{markdown} style comments in source files & C & \checkmark\\
+            16 & Editor support for coding& C  & \checkmark \\
+            17 & Folds, syntax highlighting and autocomplete in editor & C  & \checkmark \\
+            18 & Inline \textit{markdown} style comments in source files & C  & \checkmark \\
             \hline
-            18 & Comprehensive custom C++ compiler & W  & --- \\
+            19 & Comprehensive custom C++ compiler & W  & --- \\
             \hline
         \end{tabular}
       \begin{tablenotes}
